--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-/*Custom Properties*/
+/* Custom Properties */
 :root {
     --gray-500: hsl(0, 0%, 42%);
     --gray-950: hsl(0, 0%, 7%);
     --color-yellow: hsl(47, 88%, 63%)
 }
 
+/* Body Styles */
 
 * {
     margin: 0;
@@ -99,6 +100,8 @@ body {
     font-weight: 800;
     font-size: .875rem;
 }
+
+/* Media queries */
 
 @media screen and (min-width: 480px) {
     .blog-card {
